; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ivi.c_inv_bits.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ivi.c_inv_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_reverse = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i32)* @inv_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @inv_bits(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp sle i32 %6, 8
  br i1 %7, label %8, label %17

8:                                                ; preds = %2
  %9 = load i32*, i32** @ff_reverse, align 8
  %10 = load i64, i64* %3, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %4, align 4
  %14 = sub nsw i32 8, %13
  %15 = ashr i32 %12, %14
  %16 = sext i32 %15 to i64
  store i64 %16, i64* %5, align 8
  br label %34

17:                                               ; preds = %2
  %18 = load i32*, i32** @ff_reverse, align 8
  %19 = load i64, i64* %3, align 8
  %20 = and i64 %19, 255
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = shl i32 %22, 8
  %24 = load i32*, i32** @ff_reverse, align 8
  %25 = load i64, i64* %3, align 8
  %26 = lshr i64 %25, 8
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = add nsw i32 %23, %28
  %30 = load i32, i32* %4, align 4
  %31 = sub nsw i32 16, %30
  %32 = ashr i32 %29, %31
  %33 = sext i32 %32 to i64
  store i64 %33, i64* %5, align 8
  br label %34

34:                                               ; preds = %17, %8
  %35 = load i64, i64* %5, align 8
  ret i64 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
